--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -24,6 +24,7 @@ $_default-settings: (
   use-theming: true,
   use-utilities: false,
   use-css-variables: true,
+  use-font-smoothing: true,
   default-color-scheme: light,
   default-accent: primary,
   fallbacks: (
