--- a/scss/config/_internal.scss
+++ b/scss/config/_internal.scss
@@ -7,6 +7,12 @@
 $animation-prefix: anim;
 $color-prefix: color;
 $delay-prefix: delay;
+$font-family-prefix: font;
+$font-size-prefix: fs;
+$fluid-font-size-prefix: ffs;
+$font-weight-prefix: font;
+$leading-prefix: leading;
+$tracking-prefix: tracking;
 $gradient-prefix: gradient;
 $duration-prefix: duration;
 $shadow-prefix: shadow;
