--- a/scss/config/_typography.scss
+++ b/scss/config/_typography.scss
@@ -19,20 +19,29 @@ $_font-sans: map.get(tokens.$font-family, sans);
 
 $use-hyphens: true;
 
-$base-font-size: 16;
+$base-font-size: 16px;
 $base-font-family: list.join(Lato, $_font-sans);
-
-$body-font-size: lg;
 
 $headings-color: text-1;
 $headings-font-family: list.join(Montserrat, $_font-sans);
 $headings-font-weight: medium;
-$headings-font-size: 5xl 4xl 3xl 2xl xl lg;
-$headings-spacing-ratio: 1.125;
 
-$lead-font-size: xl;
-
-$fluid-font-size: '2vw + 1rem';
-
-$inline-text-padding: 0.05em 0.15em;
+$inline-text-padding: 0.1em 0.25em;
 $inline-text-border-radius: xs;
+
+// Fluid
+$fluid-type-scale: 1.2;
+$fluid-base-line-height-factor: 2.5ex;
+
+// Prose
+$prose-base-line-height-factor: 2.5ex;
+
+$prose-headings-margin-top: 1.125em;
+$prose-headings-margin-bottom: 0.65em;
+$prose-headings-line-height-factor: 2ex;
+
+$prose-body-min-font-size: md;
+$prose-body-max-font-size: lg;
+
+$prose-lead-min-font-size: lg;
+$prose-lead-max-font-size: xl;
