--- a/scss/config/_internal.scss
+++ b/scss/config/_internal.scss
@@ -11,8 +11,11 @@ $font-family-prefix: font;
 $font-size-prefix: fs;
 $fluid-font-size-prefix: ffs;
 $font-weight-prefix: font;
+$layer-prefix: z;
 $leading-prefix: leading;
 $tracking-prefix: tracking;
 $gradient-prefix: gradient;
 $duration-prefix: duration;
 $shadow-prefix: shadow;
+$screens-prefix: screen;
+$spacing-prefix: size;
