--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -85,27 +85,22 @@
     font-weight: font(medium);
     margin-bottom: 1.6em;
     margin-top: 1.6em;
-    padding: 0.25em 2em;
-
-    p {
-      margin-bottom: 1.25em;
-      margin-top: 1.25em;
-    }
+    padding: 1.5em 2em;
 
     p:first-of-type {
+      margin-top: 0;
+
       &::before {
         content: open-quote;
       }
     }
 
     p:last-of-type {
+      margin-bottom: 0;
+
       &::after {
         content: close-quote;
       }
-    }
-
-    cite {
-      margin-bottom: 1.25em;
     }
   }
 
