--- a/scss/api/_focus.scss
+++ b/scss/api/_focus.scss
@@ -2,4 +2,58 @@
 //   Focus API
 // --------------------------------
 
-// TODO: Focus (ring)
+@use '../config';
+@use 'color' as *;
+
+// -------------------------------------
+//   Vars
+// -------------------------------------
+
+$_default-color: accent(5);
+$_default-width: 2px;
+$_default-offset: 2px;
+$_default-offset-color: fill(surface, 1);
+$_default-style: solid;
+
+// -------------------------------------
+//   Functions
+// -------------------------------------
+
+// Get the value of the focus ring shadow
+@function ring(
+  $color: $_default-color,
+  $width: $_default-width,
+  $offset: $_default-offset,
+  $offset-color: $_default-offset-color,
+  $inset: null
+) {
+  @return $inset 0 0 0 $offset $offset-color, $inset 0 0 0 calc($width + $offset) $color;
+}
+
+// -------------------------------------
+//   Mixins
+// -------------------------------------
+
+// Apply focus using outline
+@mixin outline($color: $_default-color, $width: $_default-width, $offset: $_default-offset, $style: $_default-style) {
+  outline-color: $color;
+  outline-offset: $offset;
+  outline-style: $style;
+  outline-width: $width;
+}
+
+@mixin ring(
+  $color: $_default-color,
+  $width: $_default-width,
+  $offset: $_default-offset,
+  $offset-color: $_default-offset-color,
+  $inset: null
+) {
+  --koi-ring-offset-shadow: var(--koi-ring-inset, #{$inset}) 0 0 0 var(--koi-ring-offset, #{$offset})
+    var(--koi-ring-offset-color, #{$offset-color});
+
+  --koi-ring-shadow: var(--koi-ring-inset, #{$inset}) 0 0 0 calc(#{$width} + var(--koi-ring-offset, #{$offset}))
+    var(--koi-ring-color, #{$color});
+
+  box-shadow: var(--koi-ring-offset-shadow), var(--koi-ring-shadow), var(--koi-shadow, 0 0 #0000);
+}
