--- a/scss/config/_typography.scss
+++ b/scss/config/_typography.scss
@@ -26,7 +26,7 @@ $headings-color: text-1;
 $headings-font-family: list.join(Montserrat, $_font-sans);
 $headings-font-weight: medium;
 
-$inline-text-padding: 0.1em 0.25em;
+$inline-text-padding: 0.1875em;
 $inline-text-border-radius: xs;
 
 // Fluid
