--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -124,7 +124,7 @@
     border-left-width: var(--koi-quote-border-with, 0.25rem);
     color: var(--koi-quote-foreground, fill(text, 1));
     margin-top: -0.5em;
-    padding: 0 2em 1.5em 2em;
+    padding: 0 2em 1.5em;
     text-align: left;
   }
 
