--- a/scss/api/_shadow.scss
+++ b/scss/api/_shadow.scss
@@ -7,7 +7,7 @@
 @use 'setting' as *;
 @use 'theme' as *;
 
-$_default-shadow: setting(fallbacks, shadow);
+$_default-shadow: setting(defaults, shadow);
 
 // --------------------------------
 //   Functions
